Fix to lsa template

--- a/app/assets/stylesheets/front/_template-lsa.css.scss.erb
+++ b/app/assets/stylesheets/front/_template-lsa.css.scss.erb
@@ -3,196 +3,11 @@
 <% end %>
 
 
-//@import
-//'leaflet',
-//'icons',
-//'../layouts/shared/*',
-//'../layouts/front/*',
-//'../components/shared/**/*',
-//'../components/front/**/*';
-
-//$color-10: darken(saturate($color-1, 10%), 5%) default;
-//$background-color-1: rgba($color-1, .2) default;
-
-// Merriweather
-@font-face {
-  font-family: 'Merriweather';
-  font-weight: 300;
-  src: font-url('fonts/Merriweather/Merriweather-Light.ttf');
-}
-
-@font-face {
-  font-family: 'Merriweather';
-  font-weight: 400;
-  src: font-url('fonts/Merriweather/Merriweather-Regular.ttf');
-}
-
-@font-face {
-  font-family: 'Merriweather';
-  font-weight: 700;
-  src: font-url('fonts/Merriweather/Merriweather-Bold.ttf');
-}
-
-@font-face {
-  font-family: 'Merriweather';
-  font-style: italic;
-  font-weight: 300;
-  src: font-url('fonts/Merriweather/Merriweather-LightItalic.ttf');
-}
-
-// Merriweather Sans
-@font-face {
-  font-family: 'Merriweather Sans';
-  font-weight: 300;
-  src: font-url('fonts/Merriweather/MerriweatherSans-Light.ttf');
-}
-
-// Font families
-$font-family-1: 'Merriweather Sans', sans-serif;
-$font-family-2: 'Merriweather', serif;
-
-// Font sizes
-$font-size-small:    12px;
-$font-size-normal:   14px;
-$font-size-s-normal: 15px;
-$font-size-x-normal: 19px;
-$font-size-medium:   21px;
-$font-size-big:      35px;
-$font-size-x-big:    40px;
-$font-size-huge:     47px;
-$font-size-x-huge:   70px;
-
-// Font weights
-$font-weight-light:  300;
-$font-weight-normal: 400;
-$font-weight-bold:   700;
-
-// Colors
-$color-2:  #f7f7f7;
-$color-3:  #fff;
-$color-4:  #555;
-$color-5:  #000;
-$color-6:  #333;
-$color-7:  #3b3b3b;
-$color-8:  #f5f4f4;
-$color-9:  #eceaea;
-$color-11: #fff00e;
-$color-12: #dd3e21;
-$color-13: #dededd;
-
-// General layout
-$body-max-width:         1280px;
-$content-max-width:       750px;
-$media-max-width:        1060px;
-$wrapper-padding:          30px;
-$wrapper-tablet-padding:   30px;
-$wrapper-mobile-padding:   15px;
-
-// Breakpoints
-$breakpoint-mobile:  425px;
-$breakpoint-tablet:  768px;
-$breakpoint-laptop: 1024px;
-
-// Media queries
-$mq-mobile: 'screen and (min-width: #{$breakpoint-mobile})';
-$mq-tablet: 'screen and (min-width: #{$breakpoint-tablet})';
-$mq-laptop: 'screen and (min-width: #{$breakpoint-laptop})';
-
-$mq-body-width: 'screen and (min-width: #{$body-max-width})';
-
-// Theme
-$theme: 1;
-
-* {
-  box-sizing: border-box;
-
-  &::before,
-  &::after {
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-}
-
-html,
-body {
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  max-width: $body-max-width;
-  color: $color-4;
-  font-family: $font-family-1;
-  font-size: $font-size-s-normal;
-  font-weight: $font-weight-light;
-  line-height: 2.1;
-
-  @media #{$mq-body-width} {
-    margin: 0 auto;
-  }
-
-  &.-wide {
-    max-width: none;
-  }
-}
-
-ul {
-  display: inline-block;
-  margin: 0;
-  padding: 0;
-
-  > li {
-    display: inline-block;
-    list-style: none;
-  }
-}
-
-a {
-  color: $color-1;
-}
-
-.wrapper {
-  width: 100%;
-  padding: 0 $wrapper-mobile-padding;
-
-  @media #{$mq-mobile} {
-    padding: 0 $wrapper-tablet-padding;
-  }
-
-  @media #{$mq-tablet} {
-    padding: 0 $wrapper-padding;
-  }
-}
-
-.is-hidden {
-  display: none;
-}
-
-.turbolinks-progress-bar {
-  background-color: $color-1;
-}
-
-//::selection {
-//  background: $background-color-1;
-//}
-//
-//::-moz-selection {
-//  background: $background-color-1;
-//}
-
-// We hide the map header
-.app-header {
-  display: none !important;
-}
-
-@media (max-width:950px) {
-  .map-container{
-    top: 55px !important;
-    position: fixed !important;
-  }
-}
-
-.tab-buttons__tab.mobile-show[data-value="MORE"] {
-  display: none !important;
-}
+@import
+'leaflet',
+'../../app/assets/stylesheets/front/settings-theme-lsa',
+'../../app/assets/stylesheets/front/base-theme-lsa',
+'../../app/assets/stylesheets/layouts/shared/*',
+'../../app/assets/stylesheets/layouts/front/*',
+'../../app/assets/stylesheets/components/shared/**/*',
+'../../app/assets/stylesheets/components/front/**/*';
