--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <link rel="apple-touch-icon" href="<%= @favico %>">
   <link rel="stylesheet" href="https://cdn.quilljs.com/1.1.6/quill.core.css">
 
-  <%= stylesheet_link_tag 'front/application-theme-fa', media: 'all', 'data-turbolinks-track': 'reload' if (Rails.env.development? && @site_page.site_template.name.eql?('Forest Atlas') %>
+  <%= stylesheet_link_tag 'front/application-theme-fa', media: 'all', 'data-turbolinks-track': 'reload' if (Rails.env.development? && @site_page.site_template.name.eql?('Forest Atlas')) %>
   <%= stylesheet_link_tag 'front/application-theme-lsa', media: 'all', 'data-turbolinks-track': 'reload' if (Rails.env.development? && @site_page.site_template.name.eql?('Landscape Application')) %>
   <%= stylesheet_link_tag "front/sites/#{@site_page.site.id}.css", media: 'all', 'data-turbolinks-track': 'reload' unless Rails.env.development?%>
 
