--- a/app/views/management/page_steps/preview.html.erb
+++ b/app/views/management/page_steps/preview.html.erb
@@ -1,5 +1,12 @@
-<% content_for :body_class do %>
-  class="-wide"
+<% content_for :extended_header do %>
+  <div class="c-extended-header">
+    <div class="wrapper">
+      <div class="description">
+        <h1>Layout preview</h1>
+        <p>Please select the default charts and the map's zoom and position</p>
+      </div>
+    </div>
+  </div>
 <% end %>
 
 <%= render partial: 'shared/navigation_header', locals: \
@@ -11,50 +18,72 @@
 <%= form_for @page, url: wizard_path, method: :put do |f| %>
   <input type="hidden" type="text" name="site_page[dataset_setting][default_graphs]" value="" class="js-charts-input" />
   <input type="hidden" type="text" name="site_page[dataset_setting][default_map]" value="" class="js-map-input" />
+
   <div class="l-page-creation -dashboard-preview">
     <div class="l-analysis-dashboard">
-      <div class="main-container">
-        <h2><%= @page.name %></h2>
-        <p class="description">
-          <%= @page.description %>
-        </p>
+      <div class="bookmarks">
+        <div class="wrapper">
+          <div class="c-dashboard-bookmarks">
+            <h3>Bookmarks:</h3>
+            <ul class="bookmarks">
+              <li class="js-bookmark" tabindex="0">
+                <span class="js-name">Bookmark #1</span>
+                <div>
+                  <button type="button" class="apply js-apply" title="Apply bookmark" aria-label="Apply bookmark">Bookmark #1</button>
+                  <div class="floating-buttons">
+                    <button type="button" class="-edit js-edit" title="Edit bookmark name">Edit bookmark name<svg width="15" height="15" viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path d="M11.279 0l3.711 3.711-9.278 9.278-3.711-3.71L11.279 0zM1.537 9.742l3.711 3.711-4.392.682.681-4.393z" fill="#FFF" fill-rule="evenodd"/></svg></button>
+                    <button type="button" class="-delete js-delete" title="Delete bookmark">Delete bookmark<svg width="10" height="14" viewBox="0 0 10 14" xmlns="http://www.w3.org/2000/svg"><path d="M7 1V0H3v1H0v2h10V1H7zM1 14h8V4H1v10z" fill="#555" fill-rule="evenodd"/></svg></button>
+                  </div>
+                </div>
+              </li>
+              <li class="js-bookmark" tabindex="0">
+                <span class="js-name">Bookmark #2</span>
+                <div>
+                  <button type="button" class="apply js-apply" title="Apply bookmark" aria-label="Apply bookmark">Bookmark #2</button>
+                  <div class="floating-buttons">
+                    <button type="button" class="-edit js-edit" title="Edit bookmark name">Edit bookmark name<svg width="15" height="15" viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path d="M11.279 0l3.711 3.711-9.278 9.278-3.711-3.71L11.279 0zM1.537 9.742l3.711 3.711-4.392.682.681-4.393z" fill="#FFF" fill-rule="evenodd"/></svg></button>
+                    <button type="button" class="-delete js-delete" title="Delete bookmark">Delete bookmark<svg width="10" height="14" viewBox="0 0 10 14" xmlns="http://www.w3.org/2000/svg"><path d="M7 1V0H3v1H0v2h10V1H7zM1 14h8V4H1v10z" fill="#555" fill-rule="evenodd"/></svg></button>
+                  </div>
+                </div>
+              </li>
+              <li class="add-button">
+                <button type="button" class="js-add-bookmark">Create bookmark</button>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="wrapper">
+        <div class="description">
+          <% if @page.description.length > 200 %>
+            <%= @page.description[0, 200].strip + '…' %><br/>
+            <button type="button" class="js-read-more">Read more</button>
+            <div class="full-description js-description">
+              <%= @page.description %>
+            </div>
+          <% else %>
+            <%= @page.description %>
+          <% end %>
+        </div>
         <div class="filters">
           <% @analysis_user_filters.each do |filter| %>
-            <div  class="c-select">
-              <select>
+            <div class="c-select -small">
+              <select aria-label="Filter by <%= filter %>">
                 <option value="" selected="selected">Filter by <%= filter %></option>
               </select>
             </div>
           <% end %>
         </div>
-        <div class="map js-map">
+
+        <div class="widgets">
+          <div class="large-widget js-map"></div>
+          <div class="widget js-chart-1"></div>
+          <div class="widget js-chart-2"></div>
         </div>
-      </div>
-      <div class="secondary-container">
-        <div class="graph js-chart-1"></div>
-        <div class="graph js-chart-2"></div>
-        <div class="bookmarks c-dashboard-bookmarks">
-          <header>
-            <h3>Bookmarks</h3>
-            <button type="button" class="c-button -outline -dark-text -normal-weight">Add state</button>
-          </header>
-          <ul class="bookmarks">
-            <li>
-              <span title="Click to edit the name" contenteditable="true">Bookmark #1</span>
-              <div class="buttons">
-                <button type="button" class="-apply" title="Apply state">Apply state<svg width="16" height="11" viewBox="0 0 16 11" xmlns="http://www.w3.org/2000/svg"><path d="M5.895 5.5a2.106 2.106 0 1 0 4.21 0 2.106 2.106 0 1 0-4.21 0zM16 5.5C14.467 2.768 11.461 0 8 0 4.547 0 1.533 2.768 0 5.5 1.533 8.232 4.547 11 8 11c3.461 0 6.467-2.768 8-5.5zM8 1.692c2.09 0 3.79 1.705 3.79 3.808 0 2.103-1.7 3.808-3.79 3.808S4.21 7.603 4.21 5.5c0-2.103 1.7-3.808 3.79-3.808z" fill="#555" fill-rule="evenodd"/></svg></button>
-                <button type="button" class="-delete" title="Delete bookmark">Delete bookmark<svg width="10" height="14" viewBox="0 0 10 14" xmlns="http://www.w3.org/2000/svg"><path d="M7 1V0H3v1H0v2h10V1H7zM1 14h8V4H1v10z" fill="#555" fill-rule="evenodd"/></svg></button>
-              </div>
-            </li>
-            <li>
-              <span title="Click to edit the name" contenteditable="true">Bookmark #2</span>
-              <div class="buttons">
-                <button type="button" class="-apply" title="Apply state">Apply state<svg width="16" height="11" viewBox="0 0 16 11" xmlns="http://www.w3.org/2000/svg"><path d="M5.895 5.5a2.106 2.106 0 1 0 4.21 0 2.106 2.106 0 1 0-4.21 0zM16 5.5C14.467 2.768 11.461 0 8 0 4.547 0 1.533 2.768 0 5.5 1.533 8.232 4.547 11 8 11c3.461 0 6.467-2.768 8-5.5zM8 1.692c2.09 0 3.79 1.705 3.79 3.808 0 2.103-1.7 3.808-3.79 3.808S4.21 7.603 4.21 5.5c0-2.103 1.7-3.808 3.79-3.808z" fill="#555" fill-rule="evenodd"/></svg></button>
-                <button type="button" class="-delete" title="Delete bookmark">Delete bookmark<svg width="10" height="14" viewBox="0 0 10 14" xmlns="http://www.w3.org/2000/svg"><path d="M7 1V0H3v1H0v2h10V1H7zM1 14h8V4H1v10z" fill="#555" fill-rule="evenodd"/></svg></button>
-              </div>
-            </li>
-          </ul>
-        </div>
+
+        <hr/>
+        <div class="table js-table"></div>
       </div>
     </div>
   </div>
