--- a/app/assets/stylesheets/layouts/shared/l-analysis-dashboard.scss
+++ b/app/assets/stylesheets/layouts/shared/l-analysis-dashboard.scss
@@ -1,82 +1,148 @@
 $secondary-container-initial-width: 400px;
 
 .l-analysis-dashboard {
-  margin-top: 25px;
+  margin-bottom: 50px;
 
-  @media #{$mq-laptop} {
-    display: flex;
-    align-items: stretch;
-    justify-content: space-between;
-    height: calc(100vh - 80px);
-  }
-
-  h2 {
-    margin: 0 0 15px;
-    font-size: $font-size-huge;
-    letter-spacing: .3px;
-    line-height: 1.1;
-
-    @if $theme == 2 {
-      font-weight: $font-weight-light;
-    } @else {
-      color: $color-1;
-      font-family: $font-family-2;
-      font-weight: $font-weight-bold;
-    }
-  }
-
-  > .main-container {
-    padding: $wrapper-mobile-padding;
-
-    @media #{$mq-laptop} {
-      flex-basis: calc(100% - $secondary-container-initial-width);
-      flex-grow: 1;
-      flex-shrink: 1;
-      padding: 15px 25px;
-    }
-  }
-
-  > .secondary-container {
-    padding: 0 $wrapper-mobile-padding 15px;
-    border-left: 1px solid rgba($color-4, .1);
-
-
-    @media #{$mq-laptop} {
-      flex-basis: $secondary-container-initial-width;
-      flex-grow: 0;
-      flex-shrink: 0;
-      padding: 0 25px 15px;
-      overflow-y: auto;
-      -webkit-overflow-scrolling: touch;
-    }
+  > .bookmarks {
+    background-color: $color-16;
   }
 
   .description {
-    margin: 0;
+    max-width: $content-max-width;
+    margin: 30px auto 0;
     font-size: $font-size-x-normal;
     font-weight: $font-weight-light;
+
+    @if $theme == 1 {
+      line-height: 1.6;
+    }
+
+    @media #{$mq-tablet} {
+      margin: 45px auto 0;
+    }
+
+    button {
+      display: inline;
+      padding: 0;
+      border: 0;
+      background: transparent;
+      color: $color-1;
+      font-family: inherit;
+      font-size: inherit;
+      font-weight: inherit;
+      cursor: pointer;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+    }
+
+    .full-description {
+      display: none;
+    }
   }
 
   .filters {
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    margin-top: 20px;
+    width: 100%;
+    max-width: $content-max-width;
+    margin: 30px auto 0;
 
     @media #{$mq-tablet} {
       flex-direction: row;
       align-items: flex-start;
       height: 40px;
+      margin: 40px auto 0;
     }
 
     > *:not(:last-of-type) {
       margin-bottom: 15px;
 
       @media #{$mq-tablet} {
-        margin-bottom: 0;
         margin-right: 17px;
+        margin-bottom: 0;
       }
     }
+  }
+
+  .widgets {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-width: $media-max-width;
+    margin: 50px auto 0;
+
+    > .large-widget {
+      flex-basis: 100%;
+      // The factor below is from the defaults of chartWidgetView
+      // Please make them coincide
+      height: #{$breakpoint-mobile * .5};
+      margin-bottom: 45px;
+
+      @media #{$mq-tablet} {
+        // The factor below is from the defaults of chartWidgetView
+        // Please make them coincide
+        height: #{$breakpoint-tablet * .5};
+      }
+
+      @media #{$mq-laptop} {
+        // The factor below is from the defaults of chartWidgetView
+        // Please make them coincide
+        height: #{$media-max-width * .5};
+      }
+    }
+
+    > .widget {
+      flex-basis: 100%;
+      max-width: 100%; // Required for the widget's container calculations (_onResize)
+      margin-bottom: 45px;
+
+      @media #{$mq-tablet} {
+        flex-basis: calc(50% - 30px);
+        margin-bottom: 0;
+      }
+    }
+
+    // Target the first "small" widget
+    > div:nth-of-type(2) {
+      position: relative;
+
+      @media #{$mq-tablet} {
+        margin-bottom: 0;
+
+        &::after {
+          display: block;
+          position: absolute;
+          top: 0;
+          right: -30px;
+          width: 1px;
+          height: 100%;
+          background-color: $color-9;
+          content: '';
+        }
+      }
+    }
+
+    // Target the last "small" widget
+    > div:last-of-type {
+      margin-bottom: 0;
+    }
+  }
+
+  hr {
+    max-width: $media-max-width;
+    margin: 50px auto;
+    border: 0;
+    border-top: 1px solid $color-9;
+
+    @media #{$mq-tablet} {
+      margin: 60px auto;
+    }
+  }
+
+  .table {
+    max-width: $media-max-width;
+    margin: 0 auto;
   }
 
   .map {
@@ -112,9 +178,5 @@ $secondary-container-initial-width: 400px;
     width: calc(100% + 50px);
     padding: 15px 25px;
     border-bottom: 1px solid rgba($color-4, .1);
-  }
-
-  .bookmarks {
-    padding: 15px 0;
   }
 }
