Updates the preview of the dashboard

--- a/app/views/management/page_steps/preview.html.erb
+++ b/app/views/management/page_steps/preview.html.erb
@@ -77,9 +77,9 @@
         </div>
 
         <div class="widgets">
-          <div class="large-widget js-map"></div>
-          <div class="widget js-chart-1"></div>
-          <div class="widget js-chart-2"></div>
+          <div class="large-widget js-widget-1"></div>
+          <div class="widget js-widget-2"></div>
+          <div class="widget js-widget-3"></div>
         </div>
 
         <hr/>
