Lets the user switch the widgets on the preview
Note that the changes aren't saved properly as the backend needs to be updated first.

--- a/app/assets/javascripts/templates/front/chart-widget.hbs
+++ b/app/assets/javascripts/templates/front/chart-widget.hbs
@@ -1,4 +1,7 @@
 <div class="c-chart-widget">
   <div class="chart js-chart"></div>
-  <div class="js-chart-selector"></div>
+  <div class="toolbar">
+    <div class="js-chart-selector"></div>
+    <div class="js-switch-button"></div>
+  </div>
 </div>
